plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.season'
version = '0.0.1-SNAPSHOT'
description = 'livingmate'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // Spring Web (Controller, RestController 등 웹 어플리케이션 기본 구성)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Data JPA (ORM, Repository 등 DB 연동 기능 제공)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // === Spring Security 관련 의존성 ===
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT (JSON Web Token) 관련 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // === DB 드라이버 ===

    // mysql 드라이버
    runtimeOnly 'com.mysql:mysql-connector-j'

    // === API 문서화 및 유효성 검사 ===

    // Hibernate Validator
    implementation 'org.hibernate.validator:hibernate-validator'

    // Swagger(OpenAPI) 문서 자동 생성
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'


    // Lombok (코드 자동 생성 - getter/setter 등)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 개발 중 핫 리로딩 지원 (자동 재시작)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Spring Boot 테스트 기능
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 문자인증을 위한 라이브러리
    implementation 'net.nurigo:sdk:4.3.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
